// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO renders correctly with description 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  htmlAttributes={
    Object {
      "lang": "en",
    }
  }
  link={
    Array [
      Object {
        "href": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "rel": "icon",
        "type": "image/png",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "An awesome play",
        "name": "description",
      },
      Object {
        "content": "Czech Theater",
        "property": "og:title",
      },
      Object {
        "content": "An awesome play",
        "property": "og:description",
      },
      Object {
        "content": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "property": "og:image",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:creator",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:title",
      },
      Object {
        "content": "An awesome play",
        "name": "twitter:description",
      },
      Object {
        "content": "theater, czech, amateur",
        "name": "keywords",
      },
    ]
  }
  title="Czech Theater"
  titleTemplate="%s | Czech Theater"
/>
`;

exports[`SEO renders correctly with image 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  htmlAttributes={
    Object {
      "lang": "en",
    }
  }
  link={
    Array [
      Object {
        "href": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "rel": "icon",
        "type": "image/png",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "A great theater.",
        "name": "description",
      },
      Object {
        "content": "Czech Theater",
        "property": "og:title",
      },
      Object {
        "content": "A great theater.",
        "property": "og:description",
      },
      Object {
        "content": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/2ad1a0d2-3809-4eb6-9024-d782425209f0/Poster.jpg",
        "property": "og:image",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:creator",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:title",
      },
      Object {
        "content": "A great theater.",
        "name": "twitter:description",
      },
      Object {
        "content": "theater, czech, amateur",
        "name": "keywords",
      },
    ]
  }
  title="Czech Theater"
  titleTemplate="%s | Czech Theater"
/>
`;

exports[`SEO renders correctly with no additional props 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  htmlAttributes={
    Object {
      "lang": "en",
    }
  }
  link={
    Array [
      Object {
        "href": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "rel": "icon",
        "type": "image/png",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "A great theater.",
        "name": "description",
      },
      Object {
        "content": "Czech Theater",
        "property": "og:title",
      },
      Object {
        "content": "A great theater.",
        "property": "og:description",
      },
      Object {
        "content": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "property": "og:image",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:creator",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:title",
      },
      Object {
        "content": "A great theater.",
        "name": "twitter:description",
      },
      Object {
        "content": "theater, czech, amateur",
        "name": "keywords",
      },
    ]
  }
  title="Czech Theater"
  titleTemplate="%s | Czech Theater"
/>
`;

exports[`SEO renders correctly with title 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  htmlAttributes={
    Object {
      "lang": "en",
    }
  }
  link={
    Array [
      Object {
        "href": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "rel": "icon",
        "type": "image/png",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "A great theater.",
        "name": "description",
      },
      Object {
        "content": "Czech Theater",
        "property": "og:title",
      },
      Object {
        "content": "A great theater.",
        "property": "og:description",
      },
      Object {
        "content": "https://assets-us-01.kc-usercontent.com/fb599585-baec-0077-1624-981d3321fff0/4e43fc7c-ce8d-49fd-aba9-bdf908330220/logo.jpg",
        "property": "og:image",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:creator",
      },
      Object {
        "content": "Czech Theater",
        "name": "twitter:title",
      },
      Object {
        "content": "A great theater.",
        "name": "twitter:description",
      },
      Object {
        "content": "theater, czech, amateur",
        "name": "keywords",
      },
    ]
  }
  title="Czech Theater"
  titleTemplate="%s | Czech Theater"
/>
`;
